syntax = "proto3";

option csharp_namespace = "GpioDevicesService";

import "google/protobuf/empty.proto";

package greet;

// The air conditioner control service definition.
service AirConditioner {
  // Get current state
  rpc GetState (google.protobuf.Empty) returns (AirConditionerReply);

  // Turn on heater
  rpc TurnOnHeater (google.protobuf.Empty) returns (AirConditionerReply);

  // Turn on cooler
  rpc TurnOnCooler (google.protobuf.Empty) returns (AirConditionerReply);

  // Increase temperature
  rpc IncreaseTemperature (google.protobuf.Empty) returns (AirConditionerReply);

  // Decrease temperature
  rpc DecreaseTemperature (google.protobuf.Empty) returns (AirConditionerReply);
}

// The response message containing the temperature.
message AirConditionerReply {
  int32 temperature = 1;
  string mode = 2;
}
